--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Brandon Miller
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Product Designer from Denver
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://media.giphy.com/media/8MRm1sIaA18EU/giphy.gif
 
 #
 # Flags below are optional
@@ -17,12 +17,12 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 
 # Includes an icon in the footer for each username you enter
 footer-links:
-  dribbble:
+  dribbble: bmiller303
   email:
   facebook:
   flickr:
-  github: barryclark/jekyll-now
-  instagram:
+  github: bmiller303
+  instagram: bmiller303
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
